--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "mongoose": "^8.2.2",
     "react": "^18.2.0",
